# Advent-of-Code-2025

./: .gitignore  Cargo.toml
00 - Template/: Cargo.toml
00 - Template/tests/: test_template_2_main.rs  test_template_main.rs
01 - Secret Entrance/: Cargo.toml
01 - Secret Entrance/src/: lib.rs
01 - Secret Entrance/tests/: test_secret_entrance_2_main.rs  test_secret_entrance_main.rs
02 - Gift Shop/: Cargo.toml
02 - Gift Shop/src/: lib.rs
02 - Gift Shop/tests/: test_gift_shop_2_main.rs  test_gift_shop_main.rs
03 - Lobby/: Cargo.toml
03 - Lobby/benches/: bench_lobby_2.rs
03 - Lobby/src/: lib.rs
03 - Lobby/tests/: test_lobby_2_main.rs  test_lobby_main.rs
04 - Printing Department/: Cargo.toml
04 - Printing Department/benches/: bench_subtract_rolls_until_complete.rs
04 - Printing Department/src/: lib.rs
04 - Printing Department/tests/: test_printing_department_2_main.rs  test_printing_department_main.rs
05 - Cafeteria/: Cargo.toml
05 - Cafeteria/src/: input.rs  lib.rs  product_count.rs  product_id.rs  product_id_list.rs  product_id_range.rs  product_id_range_list.rs
05 - Cafeteria/tests/: test_cafeteria_2_main.rs  test_cafeteria_main.rs
06 - Trash Compactor/: Cargo.toml
06 - Trash Compactor/src/: lib.rs
06 - Trash Compactor/tests/: test_trash_compactor_2_main.rs  test_trash_compactor_main.rs
11 - Reactor/: Cargo.toml
11 - Reactor/src/: lib.rs
11 - Reactor/tests/: test_reactor_2_main.rs  test_reactor_main.rs
aoc_01_secret_entrance/: Cargo.toml
aoc_02_gift_shop/: Cargo.toml
toolbox/: Cargo.toml
toolbox/src/: lib.rs
(+3 files in other folders)
