[package]
name = "printing_department"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = "0.16.1"

[[bin]]
name = "printing_department"

[[bin]]
name = "printing_department_2"

[dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }
toolbox = { path = "../toolbox" }

[[bench]]
name = "bench_subtract_rolls_until_complete"
harness = false
