[package]
name = "trash_compactor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
toolbox = { path = "../toolbox" }

[[bin]]
name = "trash_compactor"

[[bin]]
name = "trash_compactor_2"

[dev-dependencies]
toolbox = { path = "../toolbox" }
